--- a/ums/src/main/resources/application.properties
+++ b/ums/src/main/resources/application.properties
@@ -7,9 +7,9 @@ server.tomcat.max-http-post-size=0
 
 # JDBC
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3307/ppl?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&characterEncoding=UTF-8&useSSL=false
-spring.datasource.username=mysql
-spring.datasource.password=mysql
+spring.datasource.url=jdbc:mysql://rm-uf6fnwoj2deb9nl076o.mysql.rds.aliyuncs.com:3306/ppfun?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&characterEncoding=UTF-8&useSSL=false
+spring.datasource.username=ppfun
+spring.datasource.password=ppfun@abc123
 spring.datasource.max-idle=50
 spring.datasource.max-active=50
 spring.datasource.max-wait=5000
