修改pom文件，添加微信服务模块

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>common</module>
         <module>ums</module>
         <module>cms</module>
+        <module>wms</module>
     </modules>
 
     <parent>
