--- a/ums/src/main/resources/application.properties
+++ b/ums/src/main/resources/application.properties
@@ -19,19 +19,19 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
-# REDIS
-spring.redis.host=127.0.0.1
-spring.redis.port=6379
-spring.redis.pool.max-idle=8
-spring.redis.pool.min-idle=0
-spring.redis.pool.max-active=8
-spring.redis.pool.max-wait=-1
-
-# MONGODB
-spring.data.mongodb.database=ppl
-spring.data.mongodb.host=127.0.0.1
-spring.data.mongodb.port=27017
-spring.data.mongodb.repositories.enabled=true
+## REDIS
+#spring.redis.host=127.0.0.1
+#spring.redis.port=6379
+#spring.redis.pool.max-idle=8
+#spring.redis.pool.min-idle=0
+#spring.redis.pool.max-active=8
+#spring.redis.pool.max-wait=-1
+#
+## MONGODB
+#spring.data.mongodb.database=ppl
+#spring.data.mongodb.host=127.0.0.1
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.repositories.enabled=true
 
 # DRUID
 spring.datasource.druid.filters=stat,wall,log4j
