--- a/wms/src/main/resources/application.properties
+++ b/wms/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.datasource.max-wait=5000
 # JPA
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.properties.hibernate.hbm2ddl.auto=none
 
 ## REDIS
 #spring.redis.host=127.0.0.1
