--- a/ums/src/main/resources/application.properties
+++ b/ums/src/main/resources/application.properties
@@ -14,10 +14,14 @@ spring.datasource.max-idle=50
 spring.datasource.max-active=50
 spring.datasource.max-wait=5000
 
-# JPA
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.hbm2ddl.auto=none
+## JPA
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.hbm2ddl.auto=none
+
+#Mybaties
+#mybatis.config-location=classpath:mybatis/mybatis-config.xml
+mybatis.mapper-locations=classpath:mybatis/mapper/*Mapper.xml
 
 ## REDIS
 #spring.redis.host=127.0.0.1
