--- a/ums/src/main/resources/application.properties
+++ b/ums/src/main/resources/application.properties
@@ -77,3 +77,10 @@ spring.freemarker.expose-request-attributes=true
 spring.freemarker.expose-session-attributes=true
 spring.freemarker.request-context-attribute=request
 
+# WX MIN APP
+ppl.miniapp.appid=wx249967d3817e6347
+ppl.miniapp.secret=0664a1aee9635fb8b3f86634c283f5c8
+ppl.miniapp.msgDataFormat=JSON
+ppl.miniapp.token=123
+ppl.miniapp.aesKey=123
+
