--- a/ums/src/main/resources/application.properties
+++ b/ums/src/main/resources/application.properties
@@ -22,6 +22,8 @@ spring.datasource.max-wait=5000
 #Mybaties
 #mybatis.config-location=classpath:mybatis/mybatis-config.xml
 mybatis.mapper-locations=classpath:mybatis/mapper/*Mapper.xml
+logging.level.mybatis.mapper=debug
+
 
 ## REDIS
 #spring.redis.host=127.0.0.1
