--- a/common/pom.xml
+++ b/common/pom.xml
@@ -27,87 +27,49 @@
         </resources>
 
 
-            <plugins>
-                <!--mybatis自动生成代码插件-->
-                <plugin>
-
-                    <groupId>org.mybatis.generator</groupId>
-
-                    <artifactId>mybatis-generator-maven-plugin</artifactId>
-
-                    <version>1.3.2</version>
-
-                    <executions>
-
-                        <execution>
-
-                            <id>Generate MyBatis Artifacts</id>
-
-                            <goals>
-
-                                <goal>generate</goal>
-
-                            </goals>
-
-                        </execution>
-
-                    </executions>
-
-                    <configuration>
-
-                        <!-- generator 工具配置文件的位置 -->
-
-                        <configurationFile>src/main/resources/generatorConfig.xml</configurationFile>
-
-                        <verbose>true</verbose>
-
-                        <overwrite>true</overwrite>
-
-                    </configuration>
-
-                    <dependencies>
-
-                        <dependency>
-
-                            <groupId>mysql</groupId>
-
-                            <artifactId>mysql-connector-java</artifactId>
-
-                            <version>5.1.34</version>
-
-                        </dependency>
-
-                        <dependency>
-
-                            <groupId>org.mybatis.generator</groupId>
-
-                            <artifactId>mybatis-generator-core</artifactId>
-
-                            <version>1.3.2</version>
-
-                        </dependency>
-
-                    </dependencies>
-
-                </plugin>
-
-                <plugin>
-
-                    <groupId>org.springframework.boot</groupId>
-
-                    <artifactId>spring-boot-maven-plugin</artifactId>
-
-                    <configuration>
-
-                        <classifier>exec</classifier>
-
-                    </configuration>
-
-                </plugin>
-            </plugins>
-
-
+        <plugins>
+            <!--mybatis自动生成代码插件-->
+            <plugin>
+                <groupId>org.mybatis.generator</groupId>
+                <artifactId>mybatis-generator-maven-plugin</artifactId>
+                <version>1.3.2</version>
+                <executions>
+                    <execution>
+                        <id>Generate MyBatis Artifacts</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <!-- generator 工具配置文件的位置 -->
+                    <configurationFile>src/main/resources/generatorConfig.xml</configurationFile>
+                    <verbose>true</verbose>
+                    <overwrite>true</overwrite>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>mysql</groupId>
+                        <artifactId>mysql-connector-java</artifactId>
+                        <version>5.1.34</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.mybatis.generator</groupId>
+                        <artifactId>mybatis-generator-core</artifactId>
+                        <version>1.3.2</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <classifier>exec</classifier>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
+
 
     <dependencies>
         <!--aliyunOSS-->
@@ -116,11 +78,19 @@
             <artifactId>aliyun-sdk-oss</artifactId>
             <version>2.8.3</version>
         </dependency>
-            <!--mybaties-->
+
+        <!--mybaties-->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>2.0.1</version>
+        </dependency>
+
+        <!--分页-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.5</version>
         </dependency>
 
         <dependency>
@@ -129,8 +99,6 @@
             <optional>true</optional>
         </dependency>
     </dependencies>
-
-
 
 
 </project>
