完善 图片上传

--- a/ums/src/main/resources/application.properties
+++ b/ums/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=ums
 server.port=8082
 server.session.timeout=30
 server.tomcat.max-http-post-size=0
-
+server.context-path=/apis/ppfun/ums
 # JDBC
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://rm-uf6fnwoj2deb9nl076o.mysql.rds.aliyuncs.com:3306/ppfun?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&characterEncoding=UTF-8&useSSL=false
