--- a/common/src/main/resources/generator.properties
+++ b/common/src/main/resources/generator.properties
@@ -1,11 +1,11 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://rm-uf6fnwoj2deb9nl076o.mysql.rds.aliyuncs.com:3306/ppfun?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&characterEncoding=UTF-8&useSSL=false&tinyInt1isBit=false
-#spring.datasource.username=ppfun
-#spring.datasource.password=ppfun@abc123
+spring.datasource.url=jdbc:mysql://rm-uf6fnwoj2deb9nl076o.mysql.rds.aliyuncs.com:3306/ppfun?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&characterEncoding=UTF-8&useSSL=false&tinyInt1isBit=false
+spring.datasource.username=ppfun
+spring.datasource.password=ppfun@abc123
 #spring.datasource.max-idle=50
 #spring.datasource.max-active=50
 #spring.datasource.max-wait=5000
 
-spring.datasource.url=jdbc:mysql://rm-bp1ya0126vif2bl39to.mysql.rds.aliyuncs.com:3306/wangdai?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
-spring.datasource.username=p2p_16dai
-spring.datasource.password=AAaa1234
+#spring.datasource.url=jdbc:mysql://rm-bp1ya0126vif2bl39to.mysql.rds.aliyuncs.com:3306/wangdai?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+#spring.datasource.username=p2p_16dai
+#spring.datasource.password=AAaa1234
