add mybatis log

--- a/ums/src/main/resources/application.properties
+++ b/ums/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.datasource.max-wait=5000
 #Mybaties
 #mybatis.config-location=classpath:mybatis/mybatis-config.xml
 mybatis.mapper-locations=classpath:mybatis/mapper/*Mapper.xml
-logging.level.mybatis.mapper=debug
+logging.level.com.pipi.common.persistence.mapper=debug
 
 
 ## REDIS
