--- a/ums/src/main/resources/application.properties
+++ b/ums/src/main/resources/application.properties
@@ -83,4 +83,6 @@ spring.freemarker.request-context-attribute=request
 ppl.miniapp.appid=wx249967d3817e6347
 ppl.miniapp.secret=0664a1aee9635fb8b3f86634c283f5c8
 ppl.miniapp.msgDataFormat=JSON
+ppl.miniapp.mchId=123
+ppl.miniapp.mchKey=123
 
