--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,11 @@
             <artifactId>weixin-java-miniapp</artifactId>
             <version>${weixin-java-miniapp.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.binarywang</groupId>
+            <artifactId>weixin-java-pay</artifactId>
+            <version>${weixin-java-miniapp.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
