--- a/ums/src/main/resources/application.properties
+++ b/ums/src/main/resources/application.properties
@@ -25,13 +25,13 @@ mybatis.mapper-locations=classpath:mybatis/mapper/*Mapper.xml
 logging.level.com.pipi.common.persistence.mapper=debug
 
 
-## REDIS
-#spring.redis.host=127.0.0.1
-#spring.redis.port=6379
-#spring.redis.pool.max-idle=8
-#spring.redis.pool.min-idle=0
-#spring.redis.pool.max-active=8
-#spring.redis.pool.max-wait=-1
+# REDIS
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.pool.max-idle=8
+spring.redis.pool.min-idle=0
+spring.redis.pool.max-active=8
+spring.redis.pool.max-wait=-1
 #
 ## MONGODB
 #spring.data.mongodb.database=ppl
