加入上传限制

--- a/ums/src/main/resources/application.properties
+++ b/ums/src/main/resources/application.properties
@@ -86,3 +86,6 @@ ppl.miniapp.msgDataFormat=JSON
 ppl.miniapp.mchId=123
 ppl.miniapp.mchKey=123
 
+#文件请求大小
+multipart.maxFileSize=50MB
+multipart.maxRequestSize=50MB
